# dicetest

./: CHANGELOG.md  Cargo.toml  GUIDE.md  LICENSE-MIT  README.md  README.tpl  build.sh  justfile  release.toml
.github/workflows/: guide.yml  main.yml  release.yml  rust.yml  test.yml
examples_guide/: Cargo.toml
examples_guide/src/: lib.rs
examples_readme/: Cargo.toml
examples_readme/src/: lib.rs
guide/: book.toml
guide/src/: SUMMARY.md  dice.md  dicetest.md  dieonce_and_die.md  environment_variables.md  hints.md  introduction.md  seed_and_prng.md  stats.md
src/: adapters.rs  asserts.rs  checker.rs  codice.rs  codie.rs  cogen.rs  cogens.rs  dice.rs  dice_derive.rs  dice_trait.rs  die.rs  die_once.rs  fate.rs  formatter.rs  frontend.rs  gen.rs  gens.rs  hints.rs  lib.rs  limit.rs  logger.rs  macros.rs  main.rs  prand.rs  prelude.rs  prng.rs  runner.rs  seed.rs  stats.rs  util.rs
src/adapters/: arc_die.rs  boxed_die.rs  boxed_die_once.rs  flat_map_die.rs  flatten_die.rs  map_die.rs  rc_die.rs
src/asserts/: asserts.rs  env.rs  inverse.rs  mod.rs  mode.rs  panic.rs
src/brooder/: brooder.rs  config.rs  eval_params.rs  eval_series.rs  eval_summary.rs  limit_series.rs  mod.rs  params.rs  portions.rs  report.rs  status.rs  thread_err.rs
src/checker/: assert.rs  check.rs  debug.rs  env.rs  eval_params.rs  eval_runner.rs  eval_series.rs  eval_series_params.rs  eval_series_result.rs  eval_series_status.rs  eval_summary.rs  functions.rs  limit_series.rs  log_condition.rs  mod.rs  mode.rs  panic.rs  params.rs  portions.rs  report.rs  result.rs  size_series.rs  status.rs
src/counter/: counter.rs  mod.rs  stat.rs
src/dice/: array.rs  b_tree_map.rs  b_tree_set.rs  binary_heap.rs  bool.rs  char.rs  collection.rs  float.rs  fn_builder.rs  from.rs  hash_map.rs  hash_set.rs  index_of.rs  int.rs  integer.rs  just.rs  length.rs  linked_list.rs  one_of.rs  option.rs  prng.rs  quickcheck.rs  rand.rs  result.rs  shuffle.rs  shuffled.rs  size.rs  split.rs  split_integer.rs  split_vec.rs  string.rs  terms_of.rs  todo.rs  tree.rs  vec.rs  vec_deque.rs  zip.rs
src/die/: adapters.rs  die.rs  die_once.rs  fate.rs  limit.rs  prng.rs  seed.rs
src/formatter/: formatting.rs  summary_formatting.rs
src/frontend/: dicetest.rs  env.rs  formatter.rs  mode.rs  run_code.rs
src/gens/: array.rs  b_tree_map.rs  b_tree_set.rs  binary_heap.rs  bool.rs  char.rs  collection.rs  fn_builder.rs  from.rs  from_fn.rs  hash_map.rs  hash_set.rs  (+16 more)
tests/: dice_derive.rs  dice_derive_examples.rs  guide.rs  readme.rs
(+63 files in other folders)
