[package]
name = "dicetest"
version = "0.4.0"
authors = ["Jakob Schikowski"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Framework for writing tests with randomly generated test data"
keywords = ["testing", "fuzz", "property", "quickcheck"]
categories = ["development-tools::testing"]
repository = "https://github.com/jakoschiko/dicetest"
edition = "2021"

[dependencies]
rand_core = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }

[features]
default = ["hints", "stats"]
hints = []
stats = []
rand_core = ["dep:rand_core"]
rand = ["dep:rand", "rand_core"]

[workspace]
members = [
    "examples_readme",
]
