[package]
name = "dicetest"
version = "0.4.0"
authors = ["Jakob Schikowski"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Framework for writing tests with randomly generated test data"
keywords = ["fuzz", "property", "quickcheck", "testing"]
categories = ["development-tools::testing"]
repository = "https://github.com/jakoschiko/dicetest"
edition = "2024"
rust-version = "1.87.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
  "examples_readme",
]

[dependencies]
dicetest-derive = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }

[dev-dependencies]
dicetest = { path = ".", features = ["derive"] }
static_assertions = "1.1.0"

[features]
default = ["hints", "stats"]
derive = ["dep:dicetest-derive"]
hints = []
rand = ["dep:rand", "rand_core"]
rand_core = ["dep:rand_core"]
stats = []
